--- a/common/common.scss
+++ b/common/common.scss
@@ -7,7 +7,7 @@ $secondary-background: rgba(0, 0, 0, 0.4);
 $border-color: rgba(255, 255, 255, 0.1);
 
 $body-background-gradient-direction: bottom right;
-$body-background-gradient-color-first: #4a68c3;
+$body-background-gradient-color-first: #2196F3;
 $body-background-gradient-color-second: #00bcd4;
 $body-background-pattern-opacity: 1;
 $body-background-gradient-opacity: 0.2;
