--- a/common/common.scss
+++ b/common/common.scss
@@ -137,7 +137,7 @@ span.deleted-posts,
 .user-main .staff-counters,
 .topic-list .topic-list-item-separator td span,
 nav.post-controls .highlight-action,
-.gap,
+.gap
 {
 	color: darken($trim-color, 35%);
 }
