--- a/common/common.scss
+++ b/common/common.scss
@@ -1,27 +1,35 @@
 // Variables  ---------------------------------------------------------------------------------
 
-$main-color: #00bcd4;
-$trim-color: white;
+// palette colors -------------------------------
+
+$theme-base: #009dd8;
+$text-base: rgba(255, 255, 255, 1);
 $main-background: rgba(19, 20, 24, 0.9);
 $secondary-background: rgba(0, 0, 0, 0.4);
-$border-color: rgba(255, 255, 255, 0.1);
-
-$body-background-gradient-direction: bottom right;
-$body-background-gradient-color-first: #2196f3;
-$body-background-gradient-color-second: #00bcd4;
-$body-background-pattern-opacity: 1;
-$body-background-gradient-opacity: 0.2;
-
 $danger-color: #96000e;
-$ok-color: #00bf9a;
 
-$highlight-color: rgba(255, 255, 255, 0.1);
+// derived colors -------------------------------
+
+$border-color: rgba($text-base, 0.1);
+$highlight-color: $border-color;
+$theme-trim: adjust-hue($theme-base, 150deg);
+$ok-color: adjust-hue($danger-color, 150deg);
+$link-color: lighten($theme-base, 25%);
+
+// theme settings -------------------------------
+
+$body-background-pattern-opacity: 0.8;
+$body-background-gradient-opacity: 0.35;
+$body-background-gradient-direction: top left;
+$body-background-gradient-color-first: adjust-hue($theme-base, 20deg);
+$body-background-gradient-color-second: adjust-hue($theme-base, -10deg);
 $highlight-speed: 1.5s;
 
 // fonts --------------------------------------------------------------------------------------
 
 html {
 	font-family: "Roboto", sans-serif;
+	background: #111;
 }
 
 body,
@@ -75,32 +83,22 @@ html {
 }
 
 * {
-	outline-color: $main-color;
+	outline-color: darken($theme-base, 15%);
 }
 
 // colors -------------------------------------------------------------------------------------
 
-// color trim color -----------------------------
+// color text base -----------------------------
 
 .badge-notification,
 .nav-pills > li > a:hover,
 .layouts-nav-button > li > a:hover,
-.btn-primary,
-.btn,
 .category-list .topics .badge-notification,
 .category-list .category .badge-notification,
-.btn:hover,
-.btn.btn-hover,
 .timeline-container .topic-timeline .timeline-handle,
-.btn:active,
-.btn:focus,
 .media .media-left img,
 .modal-dialog .modal-content,
 .modal-dialog.cascading-modal .modal-header,
-.z-depth-1-half,
-ul.instagram-photos li img,
-.btn-primary:hover,
-.btn-primary.btn-hover,
 .nav-pills > li.active > a,
 .layouts-nav-button > li.active > a,
 .nav-pills > li > a.active,
@@ -111,17 +109,13 @@ ul.instagram-photos li img,
 .admin-controls .nav.nav-pills li.active a,
 #user-card .card-content,
 .user-nav,
-.btn-danger[href],
-.btn-danger,
 .badge-notification.clicks,
-.topic-map .link-summary .btn,
-.bootbox.modal .modal-footer a.btn-primary,
 span.helpful-flags,
 span.flagged-posts,
 span.deleted-posts,
-.modal.history-modal del 
- {
-	color: $trim-color;
+.modal.history-modal del,
+a:hover > i.d-icon {
+	color: $text-base;
 }
 
 .list-cell,
@@ -137,30 +131,22 @@ span.deleted-posts,
 .user-main .staff-counters,
 .topic-list .topic-list-item-separator td span,
 nav.post-controls .highlight-action,
-.gap
-{
-	color: darken($trim-color, 35%);
+.gap {
+	color: darken($text-base, 35%);
 }
 
-.user-main .staff-counters a,
-a.mention {
-	color: $main-color;
+.user-main .staff-counters a {
+	color: $theme-base;
 }
 
 // backgrounds --------------------------------------------------------------------------------
 
-// background main color ------------------------
+// background theme base -------------------------
 
 .timeline-container .topic-timeline .timeline-handle,
-.btn:active,
-.btn:focus,
 .media .media-left img,
 .modal-dialog .modal-content,
 .modal-dialog.cascading-modal .modal-header,
-.z-depth-1-half,
-ul.instagram-photos li img,
-.btn-primary:hover,
-.btn-primary.btn-hover,
 .nav-pills > li.active > a,
 .layouts-nav-button > li.active > a,
 .nav-pills > li > a.active,
@@ -168,8 +154,10 @@ ul.instagram-photos li img,
 .open .grippie,
 .badge-notification.new-posts,
 .badge-notification.unread-posts,
-.admin-controls .nav.nav-pills li.active a {
-	background: darken($main-color, 10%);
+.admin-controls .nav.nav-pills li.active a,
+#reply-control.draft,
+#reply-control.saving {
+	background: darken($theme-base, 15%);
 }
 
 // background main background  ------------------
@@ -226,11 +214,9 @@ table.category-list > thead,
 
 // background secondary background --------------
 
-.btn:not(:hover):not(.btn-danger),
 .nav-pills > li > a:hover,
 .layouts-nav-button > li > a:hover,
 .admin-controls,
-.topic-map .buttons .btn,
 section.embedded-posts.bottom,
 section.embedded-posts.top {
 	background: $secondary-background;
@@ -270,10 +256,10 @@ a.mention-group,
 .d-header-icons .icon:hover,
 .d-header-icons .icon:active,
 .widget-container,
-.d-editor-container .d-editor-button-bar .btn,
 .reply *.topic-body,
 tr.topic-list-item-separator + .topic-list-item,
-.deleted .topic-body {
+.deleted .topic-body,
+.topic-map .buttons .btn {
 	background: $n;
 }
 
@@ -305,9 +291,9 @@ img.avatar,
 .topic-body,
 .topic-map,
 .topic-map section,
-.topic-map .buttons .btn,
 .embedded-posts .topic-body,
-.embedded-posts .row {
+.embedded-posts .row,
+.topic-map .buttons .btn {
 	border: $n !important;
 }
 
@@ -897,6 +883,11 @@ body:before {
 
 // Inputs -------------------------------------------------------------------------------------
 
+input {
+	transition: border, box-shadow, color, outline, background;
+	transition-duration: 0.5s;
+}
+
 input[type="date"]:focus:not([readonly]),
 input[type="datetime-local"]:focus:not([readonly]),
 input[type="email"]:focus:not([readonly]),
@@ -910,7 +901,7 @@ input[type="time"]:focus:not([readonly]),
 input[type="url"]:focus:not([readonly]),
 textarea.md-textarea:focus:not([readonly]) {
 	border-color: rgba(255, 255, 255, 0.2);
-	border-bottom: 1px solid $main-color;
+	border-bottom: 1px solid darken($theme-base, 15%);
 	box-shadow: $n;
 }
 
@@ -918,8 +909,8 @@ textarea.md-textarea:focus:not([readonly]) {
 .select-box-kit.combo-box .select-kit-header.is-focused,
 .select-kit.combo-box .select-box-kit-header.is-focused,
 .select-kit.combo-box .select-kit-header.is-focused {
-	border: 1px solid $main-color;
-	border-bottom-color: darken($main-color, 30%);
+	border: 1px solid darken($theme-base, 15%);
+	border-bottom-color: darken($theme-base, 30%);
 	-webkit-box-shadow: $n;
 	box-shadow: $n;
 }
@@ -938,14 +929,14 @@ input[type="url"]:focus,
 input[type="search"]:focus,
 input[type="tel"]:focus,
 input[type="color"]:focus {
-	border-color: $main-color;
+	border-color: darken($theme-base, 15%);
 	box-shadow: $n;
 	outline: 0;
 }
 
 .select-box-kit.combo-box.is-expanded .select-kit-wrapper,
 .select-kit.combo-box.is-expanded .select-kit-wrapper {
-	border: 1px solid $main-color;
+	border: 1px solid darken($theme-base, 15%);
 	-webkit-box-shadow: $n;
 	box-shadow: $n;
 }
@@ -958,7 +949,7 @@ input[type="color"]:focus {
 .select-box-kit .select-kit-row.is-selected.is-highlighted,
 .select-kit .select-box-kit-row.is-selected.is-highlighted,
 .select-kit .select-kit-row.is-selected.is-highlighted {
-	background: darken($main-color, 30%);
+	background: darken($theme-base, 30%);
 }
 
 .select2-container-active {
@@ -966,16 +957,16 @@ input[type="color"]:focus {
 }
 
 .select2-drop-active {
-	border: 1px solid $main-color;
+	border: 1px solid darken($theme-base, 15%);
 }
 
 #reply-control .tag-chooser.select2-dropdown-open,
 #reply-control .tag-chooser.select2-container-active {
-	border-color: $main-color;
+	border-color: darken($theme-base, 15%);
 }
 
 .select2-drop-active {
-	border-top-color: darken($trim-color, 40%);
+	border-top-color: darken($text-base, 40%);
 }
 
 div.ac-wrap {
@@ -991,11 +982,11 @@ div.ac-wrap {
 
 .select-box-kit.dropdown-select-box .dropdown-select-box-header.is-focused,
 .select-kit.dropdown-select-box .dropdown-select-box-header.is-focused {
-	outline-color: $main-color;
+	outline-color: darken($theme-base, 15%);
 }
 
 .select2-container-multi.select2-container-active .select2-choices {
-	border: 1px solid $main-color;
+	border: 1px solid darken($theme-base, 15%);
 }
 
 // Media queries ------------------------------------------------------------------------------------
@@ -1027,14 +1018,14 @@ div.ac-wrap {
 // Extras -------------------------------------------------------------------------------------
 
 .pace .pace-progress {
-	background: $main-color;
+	background: darken($theme-base, 15%);
 }
 
 .spinner {
 	height: 35px;
 	width: 35px;
 	border: $n;
-	box-shadow: inset 0 1px 1px $main-color;
+	box-shadow: inset 0 1px 1px lighten($theme-base, 15%);
 	margin: 60px auto 0 auto;
 }
 
@@ -1044,23 +1035,19 @@ div.ac-wrap {
 	cursor: pointer;
 }
 
-.btn:hover .d-icon {
-	opacity: 1;
-}
-
 .topic-list .posters a:first-child .avatar.latest:not(.single) {
 	box-shadow: $n;
-	border: 2px solid darken($main-color, 5%);
+	border: 2px solid darken($theme-base, 5%);
 }
 
 // edit history modal
 .modal.history-modal .diff-ins {
-	background: darken($main-color, 15%);
+	background: darken($theme-base, 15%);
 }
 
 .modal.history-modal ins {
-	color: lighten($main-color, 15%);
-	background: darken($main-color, 25%);
+	color: lighten($theme-base, 15%);
+	background: darken($theme-base, 25%);
 }
 
 // TESTS --------------------------------------------------------------------------------------
@@ -1145,10 +1132,6 @@ header.d-header.clearfix {
 	height: auto;
 }
 
-.admin-interface .btn:not(:hover):not(.btn-danger) {
-	background: rgba(255, 255, 255, 0.1);
-}
-
 #background,
 body:before {
 	backface-visibility: hidden;
@@ -1157,20 +1140,26 @@ body:before {
 
 a {
 	transition: color 0.25s, background 0.25s, outline 0.25s,
-	background-color 0.25s !important;
+		background-color 0.25s !important;
 }
 
 a:hover {
-	color: $trim-color !important;
+	color: $text-base !important;
 }
 
 span.hashtag {
-	color: #f44336;
+	color: adjust-hue($theme-base, -45deg);
+	font-weight: bold;
 }
 
-a.mention,
-a.mention-group {
-	font-weight: normal;
+.main-content.loading .list-controls {
+	display: none;
+}
+
+.container.show-badge {
+	background: rgba(19, 20, 24, 0.9);
+	padding: 2em;
+	min-height: 70vh;
 }
 
 // plugin support -----------------------------------------------------------------------------
@@ -1188,7 +1177,140 @@ button.post-retort:first-of-type {
 // Whos online  ---------------------------------------
 
 #whos-online {
-	padding: 1em 1.5em;
+	padding: 1em .75em;
 	background: $main-background;
 	margin-bottom: 1em;
+}
+
+// Nothing here... keep walking... ------------------------------------------------------------
+
+// link colors ----------------------------------
+
+a {
+	color: $link-color;
+	&:visited,
+	&:hover,
+	&:active {
+		color: $link-color;
+	}
+	&.mention {
+		color: adjust-hue($link-color, 150deg);
+	}
+	&.mention-group {
+		color: adjust-hue($link-color, -150deg);
+	}
+}
+
+// Buttons ---------------------------------------
+
+.btn {
+	border-width: 0;
+	border-color: transparent;
+	font-weight: 400;
+	cursor: pointer;
+	position: relative;
+}
+.btn {
+	border-radius: 2px;
+	text-transform: uppercase;
+	-webkit-transition: all 0.25s cubic-bezier(0.02, 0.01, 0.47, 1);
+	transition: all 0.25s cubic-bezier(0.02, 0.01, 0.47, 1);
+	-webkit-transform: translate3d(0, 0, 0);
+	transform: translate3d(0, 0, 0);
+}
+.btn:hover,
+.btn:focus {
+	box-shadow: 0 5px 11px 0 rgba(0, 0, 0, 0.18), 0 4px 15px 0 rgba(0, 0, 0, 0.15);
+	-webkit-transition: box-shadow 0.4s ease-out;
+	transition: box-shadow 0.4s ease-out;
+}
+
+.btn .d-icon {
+	opacity: 1;
+}
+
+.d-editor-button-bar button {
+	background-color: transparent;
+	border: $n;
+	box-shadow: $n;
+	background: $n;
+}
+
+// Base
+
+.btn {
+	&[disabled],
+	&.disabled {
+		opacity: 0.6;
+	}
+}
+
+.btn.hidden {
+	display: none;
+}
+
+// Default button
+
+.btn {
+	color: $text-base;
+	background: transparent;
+
+	&[href] {
+		color: $text-base;
+	}
+	&:hover,
+	&.btn-hover {
+		background: darken($theme-base, 15%);
+		color: $text-base;
+	}
+	.d-icon {
+		opacity: 0.8;
+	}
+	.d-icon:hover {
+		opacity: 1;
+	}
+}
+
+// Primary button
+
+.btn-primary {
+	color: $text-base;
+	background: $theme-trim;
+
+	&[href] {
+		color: $text-base;
+	}
+	&:hover,
+	&.btn-hover {
+		background: darken($theme-base, 15%);
+	}
+}
+
+// Danger button
+
+.btn-danger {
+	color: $text-base;
+	background: $danger-color;
+	&[href] {
+		color: $text-base;
+	}
+	&[disabled],
+	&.disabled {
+		background: $danger-color;
+	}
+	&:hover,
+	&.btn-hover {
+		background: lighten($danger-color, 15%);
+		color: $text-base;
+	}
+}
+
+// Modal buttons
+
+.bootbox.modal {
+	.modal-footer {
+		a.btn-primary {
+			color: $text-base;
+		}
+	}
 }
