--- a/mobile/mobile.scss
+++ b/mobile/mobile.scss
@@ -1,9 +1,27 @@
 .topic-avatar img.avatar {
-    margin-top: .5em;
-    margin-left: .5em;
+	margin-top: 0.5em;
+	margin-left: 0.5em;
 }
 
-
 .alert {
-margin-bottom:1em !important;
+	margin-bottom: 1em !important;
+}
+
+.heatmap-high {
+	color: #fe7a15 !important;
+}
+.heatmap-med {
+	color: #cf7721 !important;
+}
+.heatmap-low {
+	color: #9b764f !important;
+}
+.heatmap-high a {
+	color: #fe7a15 !important;
+}
+.heatmap-med a {
+	color: #cf7721 !important;
+}
+.heatmap-low a {
+	color: #9b764f !important;
 }
